--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "moment": "^2.29.4",
     "mui-tel-input": "^2.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-optimized-image": "^0.4.1",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
