--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.2",
+    "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +27,8 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "react-verification-input": "^3.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "yup-phone": "^1.3.2",
@@ -58,6 +61,8 @@
     ]
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "gh-pages": "^4.0.0"
   }
 }
