--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zustand": "^4.1.1"
   },
   "scripts": {
+    "api": "json-server db.json -p 3333 --delay 1500",
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "json-server": "^0.17.1"
   }
 }
