--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.2",
     "@tanstack/react-query": "^4.20.4",
