--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "dayjs": "^1.11.5",
+    "firebase": "^9.22.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.5",
     "moment": "^2.29.4",
@@ -21,12 +22,13 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-optimized-image": "^0.4.1",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "react-verification-input": "^3.1.1",
